minor SearchDialog cleanup